# search-loop

./: .gitignore  README.md  justfile  pyproject.toml
scripts/: ablate.py  benchmark.py  collect_traces.py  run_greedy.py  sweep.py  train_value.py
searchloop/: ablate.py  agents.py  env.py  llm.py  mcts.py  metrics.py  sweep.py  tools.py  traces.py  value.py
tests/: test_ablate.py  test_agents.py  test_env.py  test_llm.py  test_mcts.py  test_metrics.py  test_smoke.py  test_sweep.py  test_tools.py  test_traces.py  test_value.py
