[project]
name = "searchloop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "openai>=2.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
